Updated action menu, experimenting with icons.

--- a/OOP-Project/OOP-Project.csproj
+++ b/OOP-Project/OOP-Project.csproj
@@ -125,5 +125,10 @@
   <ItemGroup>
     <Resource Include="Image1.png" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Icons\user.jpg" />
+    <Resource Include="Icons\user_add.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
