--- a/OOP-Project/App.config
+++ b/OOP-Project/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+  <connectionStrings>
+    <add name="DBCon" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Filip\source\repos\OOP-Project\OOP-Project\BankDB.mdf;Integrated Security=True"/>
+  </connectionStrings>
+
 </configuration>
