--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,8 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateAccount.cs" />
+    <Compile Include="CreateUserAccount.cs" />
     <Compile Include="DAO.cs" />
     <Compile Include="FundTransfer.cs" />
+    <Compile Include="LoginCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateCus.cs" />
   </ItemGroup>
