Connecting more to the server.

--- a/BIZ/BIZ.csproj
+++ b/BIZ/BIZ.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateAccount.cs" />
+    <Compile Include="CreateBankAccount.cs" />
     <Compile Include="CreateUser.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="Enums.cs" />
