--- a/BIZ/BIZ.csproj
+++ b/BIZ/BIZ.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Enums.cs" />
     <Compile Include="HashPass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XMLConversion.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
