--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -51,6 +51,7 @@
     <Compile Include="LoginCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateCus.cs" />
+    <Compile Include="ViewTransactions.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
